<?xml version="1.0"?>
<package>
  <name>langs</name>
  <version>0.4.8</version>
  <description>Package modeling the run-time dependencies for language bindings of messages.</description>
  <maintainer email="dthomas@willowgarage.com">Dirk Thomas</maintainer>
  <license>BSD</license>

  <url type="bugtracker">https://github.com/ros/langs/issues</url>
  <url type="repository">https://github.com/ros/langs</url>

  <build_depend>catkin</build_depend>

  <!-- workaround to provide the generators to dry downstream packages -->
  <run_depend>message_generation</run_depend>

  <run_depend>message_runtime</run_depend>

  <export>
    <deprecated>Instead build_depend on message_generation and run_depend on message_runtime</deprecated>
  </export>
</package>
